--- a/src/app/components/shared/brands/brands.component.html
+++ b/src/app/components/shared/brands/brands.component.html
@@ -1,8 +1,51 @@
-<ngx-slick-carousel #slickModal="slick-carousel" [config]="settings"
-    class="row align-items-center justify-content-between" id="clientSlider">
-    <div ngxSlickItem class="col" *ngFor="let item of brands">
-        <a href="#" class="client-img d-block text-center">
-            <img [src]="item.img" [alt]="item.title">
-        </a>
+<section id="brands">
+    <div class="wrapper">
+    <div class="cp-brands-banner">
+    <ul class="cp-brands-list">
+      <li class="cp-brand-item" id="mytee">
+        <a class="cp-brand-link " href="/">
+          <img src="https://cdn.shopify.com/s/files/1/1352/8413/t/21/assets/pf-2ffe7a83-c652-4322-b24d-d9ba5c517aa2--mytee.png?35165" alt="mytee" title="Mytee">
+          </a>
+      </li>
+      
+      <li class="cp-brand-item" id="gtechniq">
+        <a class="cp-brand-link " href="/">
+          <img src="https://images.squarespace-cdn.com/content/v1/5bf9ab05506fbeeca9ea72ce/1547651432114-HMCL2HXUMTK8ZLRM0QJD/red+leters-PNG.png" alt="gtechniq" title="Gtechniq">
+          </a>
+      </li>
+      
+      <li class="cp-brand-item" id="carpro">
+        <a class="cp-brand-link " href="/">
+          <img src="https://cdn02.plentymarkets.com/zzgzvodn5a8r/frontend/carpro-auto-protect-shop.png" alt="carpro" title="Carpro">
+          </a>
+      </li>
+      
+      <li class="cp-brand-item" id="chemicalguys">
+        <a class="cp-brand-link " href="/">
+          <img src="https://www.aeainvestors.com/wp-content/uploads/chemical-guys-aea-logo.png" alt="chemical guys" title="Chemical Guys">
+          </a>
+      </li>
+      
+      <li class="cp-brand-item" id="bissell">
+        <a class="cp-brand-link " href="/">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4a/Bissell_logo.svg/1200px-Bissell_logo.svg.png" alt="bissell" title="Bissell">
+          </a>
+      </li>
+      
+      
+      <li class="cp-brand-item" id="aero303">
+        <a class="cp-brand-link " href="/">
+          <img src="https://www.goldeagle.com/wp-content/uploads/2017/10/303-brand-logo-353x200.png" alt="Aero 303" title="Aero 303">
+          </a>
+      </li>
+      
+      <li class="cp-brand-item" id="rupes">
+        <a class="cp-brand-link " href="/">
+          <img src="https://logodix.com/logo/1946030.png" alt="Rupes" title="Rupes">
+          </a>
+      </li>
+    
+    </ul>
+  </div>
     </div>
-</ngx-slick-carousel>
+  </section>
