--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -707,6 +707,7 @@ div#preloader .loader-cubes .loader-cube .loader-cube3::before {
 header .header-nav {
   position: relative;
   background-color: #fff;
+  height: 120px;
 }
 
 @media (max-width: 575px) {
@@ -8598,3 +8599,230 @@ footer.grey-bg-footer .footer-copyright .back-to-top {
 footer.grey-bg-footer .footer-copyright .back-to-top:hover {
   background-color: #02376b;
 }
+.site-logo{
+  width: 200px;
+}
+
+.banner img{
+  height: 440px;
+  width: 100%;
+  object-fit: cover;
+  filter: brightness(60%);
+}
+.product-desc {
+  padding: 10px;
+}
+
+.product-img {
+  margin-bottom: 0 !important;
+}
+
+.product-img img {
+  height: 270px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+
+
+.wrapper {
+   width: 100%;
+  margin: auto;
+ }
+
+  .stylist-edit {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+    align-items: center;
+    padding: 0px 16px;
+}
+
+
+.stylist-img {
+    width: 100%;
+    padding-top: 100%;
+}
+
+.stylist-edit .stylist-img:last-child {
+    align-self: flex-start;
+}
+
+.stylist-edit h1, .impact {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+
+@media only screen and (min-width: 768px) {
+  .wrapper {
+    width: 704px;
+  }
+  
+   .stylist-edit .stylist-img:first-child, .stylist-edit .stylist-img:nth-child(2) {
+    display: none;
+}
+}
+
+@media only screen and (min-width: 1024px) {
+  .wrapper {
+    width: 960px;
+  }
+  
+  .stylist-edit h1, .impact, h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+}
+
+@media only screen and (min-width: 1280px) {
+  .wrapper {
+    width: 1216px;
+  }
+}
+
+
+
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
+
+
+@keyframes fadeInLeft {
+    0% {
+      opacity: 0;
+      transform: translateX(200px);
+    }
+
+    100% {
+      opacity: 1;
+      transform: translateX(0px);
+    }
+  }
+ @keyframes blurIn {
+    0% {
+       -webkit-filter: blur(5px); 
+  filter: blur(5px);
+    }
+
+    100% {
+       -webkit-filter: blur(0); 
+  filter: blur(0);
+    }
+  }
+
+.subtitle {
+  opacity: 0;
+  animation: fadeIn 3.5s 0.2s forwards cubic-bezier(0.02, 0.8, 0.2, 1);
+}
+
+.scroller {
+  padding: 24px 0px;
+}
+
+.scroller-text {
+  padding: 0 16px;
+  margin: 0 0 24px;
+}
+
+.scroller-btn {
+  padding: 0 16px;
+}
+
+
+  
+  
+
+/*Brands  */
+
+
+
+
+.cp-brands-list {
+  display: flex;
+  align-items: center;
+  overflow: auto;
+  list-style: none;
+  padding: 16px 0;
+  margin-bottom: 12px;
+  opacity: 0;
+  animation: fadeIn 3.5s 1s forwards cubic-bezier(0.02, 0.8, 0.2, 1);
+}
+
+.cp-brands-list::-webkit-scrollbar {
+  display: block;
+  margin-top: 16px;
+  height: 4px;
+}
+ 
+.cp-brands-list::-webkit-scrollbar-track {
+  background-color: #f7f7f7;
+}
+ 
+.cp-brands-list::-webkit-scrollbar-thumb {
+  background-color: #000;
+  outline: none;
+}
+
+.cp-brand-item {
+  flex-shrink: 0;
+  padding: 0px 16px;
+  max-width: 140px;
+}
+
+.cp-brand-link {
+  display: block;
+  transition: 0.2s;
+  position: relative;
+}
+
+.cp-brand-link:hover {
+  transform: translateY(-8px);
+  transition-timing-function: cubic-bezier(0.02, 0.8, 0.2, 1);
+}
+
+.cp-brand-link img {
+  width: 100%;
+}
+
+@media only screen and (min-width: 1280px) {
+  .cp-brands-list {
+  justify-content: space-between;
+  padding: 16px;
+}
+
+.cp-brand-item {
+  flex-grow: 1;
+  flex-basis: 0;
+  max-width: unset;
+}
+
+.cp-brands-list {
+  margin-bottom: 0;
+}
+  
+}
+
+/* @media only screen and (min-width: 1440px) {
+.cp-brand-item {
+    padding: 0px 32px;
+} */
+  
+
+
+
+
+/*==================================
+Brands End
+=====================================*/
