--- a/src/app/components/pages/blog-standard/content/content.component.html
+++ b/src/app/components/pages/blog-standard/content/content.component.html
@@ -16,7 +16,7 @@
                                         <a routerLink="/blog/author/{{author.id}}" *ngFor="let author of getAuthor(item.author)">{{author.name}}</a>
                                     </li>
                                     <li><i class="far fa-calendar-alt"></i><a href="#">{{item.postdate}}</a></li>
-                                    <li><i class="far fa-comments"></i><a href="#">Comments ({{item.reviews.length}})</a></li>
+                                    <!-- <li><i class="far fa-comments"></i><a href="#">Comments ({{item.reviews.length}})</a></li> -->
                                 </ul>
                             </div>
                             <div class="post-content">
